--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>About Me | Portfolio Website Template | CODEGRID</title>
+      <title>.MhmdSairi Webs</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -29,7 +29,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">.mhmdsairiv2</a>
                   </span>
 
                   <ul id="menu">
@@ -122,7 +122,7 @@
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
+                                                <li id="fb" class="https://mhmdsairi.vercel.app/" data-wow-delay="0.4s">fb</li>
                                                 <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
                                                 <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
                                                 <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
@@ -133,7 +133,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">admin@nadilasepianti.ml</h4>
                                           <br><br>
                                     </div>
                               </div>
