--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>.MhmdSairi Webs</title>
+      <title>.𝗺𝗵𝗺𝗱𝘀𝗮𝗶𝗿𝗶𝘃𝟮</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -111,8 +111,8 @@
                         <div class="info">
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <p class="wow fadeInUp">whatsapp me</p>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">+6285349945947</h4>
                                           <br><br>
                                     </div>
 
