--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>Portfolio Website Template | CODEGRID</title>
+      <title>.𝗺𝗵𝗺𝗱𝘀𝗮𝗶𝗿𝗶𝘃𝟮</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -65,7 +65,7 @@
             <!--------------- hero section starts here --------------->
             <div class="hero">
                   <div class="header">
-                        <h1 class="line anim-typewriter">I make brands matter in culture.</h1>
+                        <h1 class="line anim-typewriter">.they are everywhere</h1>
                   </div>
             </div>
 
@@ -95,7 +95,7 @@
                   <div class="whitespace"></div>
 
                   <div class="row">
-                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='project.html'"></div>
+                        <div class="col-lg-6 project project2 wow fadeInUp" onclick="location.href='#'"></div>
 
                         <div class="col-lg-6"></div>
                   </div>
@@ -105,7 +105,7 @@
                   <div class="row">
                         <div class="col-lg-7"></div>
 
-                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='project.html'"></div>
+                        <div class="col-lg-4 project project3 wow fadeInUp" onclick="location.href='#'"></div>
 
                         <div class="col-lg-1"></div>
                   </div>
@@ -115,7 +115,7 @@
                   <div class="row">
                         <div class="col-lg-1"></div>
 
-                        <div class="col-lg-5 project project4 wow fadeInUp" onclick="location.href='project.html'"></div>
+                        <div class="col-lg-5 project project4 wow fadeInUp" onclick="location.href='#'"></div>
 
                         <div class="col-lg-6"></div>
                   </div>
@@ -150,8 +150,8 @@
                         <div class="info">
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <p class="wow fadeInUp">whatsapp me</p>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">=6285349945947</h4>
                                           <br><br>
                                     </div>
 
@@ -170,7 +170,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">admin@nadilasepianti.ml</h4>
                                           <br><br>
                                     </div>
                               </div>
