--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">whatsapp me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">=6285349945947</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">+6285349945947</h4>
                                           <br><br>
                                     </div>
 
