--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>Contact | Portfolio Website Template | CODEGRID</title>
+      <title>.𝗺𝗵𝗺𝗱𝘀𝗮𝗶𝗿𝗶𝘃𝟮</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -29,7 +29,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">.mhmdsairiv2</a>
                   </span>
 
                   <ul id="menu">
@@ -67,9 +67,6 @@
 
                         <div class="row">
                               <div class="col-lg-8">
-
-                                    <h3 class="wow fadeInUp" data-wow-delay="1s">say hello 👋</h3><br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
 
                               </div>
                         </div>
@@ -146,8 +143,8 @@
                         <div class="info">
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <p class="wow fadeInUp">whatsapp me</p>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">+6285349945947</h4>
                                           <br><br>
                                     </div>
 
@@ -166,7 +163,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">admin@nadilasepianti.ml</h4>
                                           <br><br>
                                     </div>
                               </div>
