--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                   <span id="brand">
                         <a href="index.html">.mhmdsairiv2</a>
                   </span>
-
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-503c0e7c-a994-4a0c-abe0-e98af80c85a6"></div>
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
                         <li><a href="work.html">work<span>.</span></a></li>
