--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,18 @@
             <div class="footer">
                   <div class="container">
                         <br><br>
-
+<div id="kopi-covid"></div>
+<script>
+  var f = document.createElement("iframe");
+  f.src = "https://kopi.dev/widget-covid-19/?dark=true";
+  f.width = "100%";
+  f.height = 380;
+  f.scrolling = "no";
+  f.frameBorder = 0;
+  var rootEl = document.getElementById("kopi-covid");
+  console.log(rootEl);
+  rootEl.appendChild(f);
+</script>
                         <div class="collab">
                               <div class="row">
                                     <div class="col-lg-12">
